--- a/modules/Admin/view/grid-orders.phtml
+++ b/modules/Admin/view/grid-orders.phtml
@@ -2,12 +2,10 @@
     require(["bluz.grid"]);
 </script>
 
-
 <div class="clearfix" data-spy="grid" data-grid="{{ attribute(grid, 'getUid')  }}"
-     data-url="{{ baseUrl('admin/grid-orders') }}">
+     data-url="admin/grid-orders">
 
-
-    <form class="filter-form" action="{{ baseUrl('/admin/grid-orders') }}">
+<form class="filter-form" action="{{ baseUrl('/admin/grid-orders') }}">
         <div class="input-group-btn grid-filter-search _one-line">
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">{{ field }} <span
                     class="caret"></span></button>
